# synthetic-worlds

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  config.example.yaml  docker-compose.yml  go.mod  go.sum
cmd/syntheticworlds/: main.go
internal/adapters/http/: routes.go  server.go
internal/adapters/http/handlers/: synthetic.go  trace_import.go
internal/adapters/http/middleware/: auth.go
internal/adapters/llm/: client.go
internal/adapters/postgres/: client.go  example_provider.go  synthetic_call_repo.go  synthetic_world_repo.go  trace_repo.go
internal/adapters/redis/: client.go  synthetic_state.go
internal/config/: config.go
internal/domain/: auth.go  synthetic.go  trace.go
internal/ports/: repositories.go  services.go
internal/services/: synthetic.go  synthetic_errors.go  synthetic_prompt.go  synthetic_replay.go  synthetic_replay_test.go  synthetic_sanitize.go  synthetic_taskstate.go  synthetic_validate.go  trace_import.go
migrations/: 000001_init.down.sql  000001_init.up.sql
pkg/apierror/: errors.go
sdk/python/: pyproject.toml
sdk/python/synthetic_worlds/: __init__.py  client.py  importers.py
