[project]
name = "synthetic-worlds"
version = "0.1.0"
description = "SDK for Synthetic Worlds — realistic tool mocking powered by LLMs and production traces"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/021labs-ai/synthetic-worlds"
Documentation = "https://github.com/021labs-ai/synthetic-worlds#readme"
Repository = "https://github.com/021labs-ai/synthetic-worlds"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["synthetic_worlds"]
